<resources>
    <string name="app_name">Botanas Anita</string>
    <string name="sender_id" translatable="false">451538043682</string>
    <string name="sync">Sync</string>
    <string name="sync_success">Sync success</string>
    <string name="notifications_admin_channel_name" translatable="false">botanasapp</string>
    <string name="notifications_admin_channel_description" translatable="false">Botanas Anita</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Botanas Anita</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="percentage" translatable="false">%</string>
    <string name="exit">Exit</string>
    <string name="inventory_sync_error">Error when synchronizing inventory</string>
    <string name="sync_error">Error when synchronizing</string>
    <string name="inventory_sync_successful">Successful inventory synchronization</string>
    <string name="sales_sync_confirm_title">Do you want to synchronize the sales?</string>
    <string name="sales_sync_confirm_body">Do you really want to continue? \nThe sales will be delete and the action
        cannot be reverted.
    </string>
    <string name="sale_not_found">Sale not found, plz refresh the app</string>
    <string name="bluetooth_scanner">Scanning</string>

    <!-- settings -->
    <string name="auto_sales_sync">Auto sync sales</string>
    <string name="auto_sales_sync_description">The sales will be synchronizing automatic, you can disable this option
    </string>
    <string name="server_notifications">Server notifications</string>
    <string name="server_notifications_description">You will receive all server notification if this option is enabled
    </string>
    <string name="on" translatable="false">On</string>
    <string name="off" translatable="false">Off</string>
    <string name="search">Search</string>

    <string name="menu_home">Home</string>
    <string name="menu_inventory">Inventory</string>
    <string name="menu_sell">Sell</string>
    <string name="menu_sales">Sales</string>
    <string name="log_out">Log out</string>
    <string name="item">Item</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>-->

    <!--Strings to storage_fragment-->
    <string name="sf_quantity">Quantity</string>
    <string name="abb_quantity">Quant</string>
    <string name="sf_product_name">Product</string>
    <string name="in_stock">in stock</string>

    <!-- Strings to storage_list.xml -->
    <string name="s_quantity" translatable="false">0</string>
    <string name="s_product_name">Example product</string>

    <!-- Strings to activity_login.xml -->
    <string name="title_activity_login">Sing-in</string>
    <string name="prompt_email">User</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sing-in</string>
    <string name="action_sign_in_short">Sing-in</string>
    <string name="invalid_login">Invalid user or password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="login_failed">Log-in failed</string>

    <!-- Internet errors -->
    <string name="no_internet">We had a problem with the network.</string>

    <!-- Strings to sale fragment -->
    <string name="product_added">Added product</string>
    <string name="product_deleted">Deleted product</string>
    <string name="product_exist">The product is already in the list</string>

    <!-- Strings to customer selection  -->
    <string name="select_customer">Select a customer</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="discount">Discount</string>

    <string name="sale_confirm_title">Do you want to confirm the sale?</string>
    <string name="sale_confirm_body">Do you really want to continue? \nThe sale cannot be canceled or modified.</string>
    <string name="confirm">Confirm</string>
    <string name="no">No</string>
    <string name="abb_discount">Disc</string>
    <string name="welcome">Welcome !</string>
    <string name="no_changes">No changes have been made</string>
    <string name="sale_successful">The sale has been successful</string>
    <string name="sales_made">Sales made</string>

    <string name="no_sales">No sales</string>
    <string name="sale_detail">Sale detail</string>
    <string name="show_all">Show all</string>
    <string name="show_existing">Show existing</string>

    <string name="notification_title_sync_available">Sync your sales</string>
    <string name="notification_description_sync_available">You have sales available to synchronizing</string>

    <!--Strings to bluetooth printer-->
    <string name="printing_title">Ticket print</string>
    <string name="printing_message">Do you want print the actual sale?</string>
    <string name="printing_cancel">Ticket print canceled</string>
    <string name="printing_success">Success print</string>
    <string name="bluetooth_address_example" translatable="false">B2:31:A2:32:3W</string>
    <string name="bluetooth_pairing_error">Bluetooth pairing error</string>
    <string name="bluetooth_pairing_success">Bluetooth pairing success</string>

    <!--String driver shipload-->
    <string name="load_up_title">Load up driver</string>
    <string name="load_up_review">Shipload review</string>
    <string name="shipload_confirm_title">Do you want to confirm the shipload?</string>
    <string name="shipload_title">Shiploads driver</string>
    <string name="shipload_detail">Shipload detail</string>
</resources>
