<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity" android:background="@color/colorBackgroundGray">

    <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:id="@+id/progressBarLogin" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:indeterminate="true"
            android:indeterminateTint="@color/design_default_color_primary_dark" android:visibility="gone"
            android:indeterminateBehavior="repeat" android:indeterminateOnly="false"/>
    <ImageView
            android:layout_width="270dp"
            android:layout_height="220dp" app:srcCompat="@mipmap/ic_launcher_botanas_foreground"
            android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:contentDescription="@string/app_name"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/title_activity_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:fontFamily="@font/viga"
            android:textSize="24sp" android:textColor="#4B77BE"/>
    <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="" tools:targetApi="o"
            android:fontFamily="@font/viga" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:background="@drawable/default_edittext"/>
    <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" android:importantForAutofill="no" tools:targetApi="o"
            android:fontFamily="@font/viga" android:background="@drawable/default_edittext"/>

    <Button
            android:id="@+id/btn_login"
            android:enabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.0" android:fontFamily="@font/viga"
            android:background="@drawable/btn_accent_small" android:textColor="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>