<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SuccessShiploadActivity">

    <ImageView
            android:layout_width="245dp"
            android:layout_height="208dp" app:srcCompat="@drawable/ic_shipped"
            android:id="@+id/imageView2" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:contentDescription="@string/amount"/>
    <TextView
            android:text="@string/select_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/shipload_client_name" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:fontFamily="@font/viga" android:textSize="24sp" android:gravity="center"/>
    <TextView
            android:text="@string/s_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shipload_total" android:textSize="24sp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/shipload_client_name"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@android:string/VideoView_error_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/shipload_date"
            android:textColor="@color/colorGray" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/shipload_total"
            android:fontFamily="@font/viga" android:textSize="18sp"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_shipload_confirm" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/shipload_date" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.9"
            android:background="@drawable/btn_accent" android:fontFamily="@font/viga"
            android:textColor="@color/colorWhite"/>
</androidx.constraintlayout.widget.ConstraintLayout>