<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginRight="8dp"
              android:layout_marginTop="8dp">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/linearLayout">
            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_coin" android:id="@+id/imageButton"
                    android:contentDescription="@string/total" android:background="#00FFFFFF"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="7dp"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/select_customer"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" android:id="@+id/sales_client_name"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    android:fontFamily="@font/viga"/>
            <TextView
                    android:text="@string/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/sales_date"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/sales_client_name"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                    app:layout_constraintStart_toEndOf="@+id/imageButton" android:layout_marginStart="16dp"
                    android:textColor="@color/colorGray" android:fontFamily="@font/viga"/>
            <TextView
                    android:text="@string/sf_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/sales_amount"
                    app:layout_constraintStart_toEndOf="@+id/sales_client_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.95"
                    android:layout_marginBottom="8dp" android:layout_marginStart="8dp" android:fontFamily="@font/viga"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>