<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CustomerSelectionActivity" android:id="@+id/customer_select_layout">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:text="@string/select_customer" android:fontFamily="@font/viga" android:textSize="18sp"
            android:id="@+id/textView7" android:textColor="#4B77BE"/>

    <!--<Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/client_spinner"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>-->

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
            android:id="@+id/client_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/viga"
            android:gravity="center|center_horizontal" android:background="@drawable/default_spinner"/>
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tableLayout" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/client_spinner">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/abb_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5" android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:layout_weight=".15"/>
            <TextView
                    android:text="@string/sf_product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView17" android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:layout_weight=".45"/>
            <TextView
                    android:text="@string/price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="center" android:id="@+id/textView18"
                    android:layout_weight=".2"/>
            <TextView
                    android:text="@string/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView19" android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:layout_weight=".2"/>
        </TableRow>
    </TableLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/custProductListRecycler"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout2">
    </androidx.recyclerview.widget.RecyclerView>
    <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/tableLayout2"
            app:layout_constraintHorizontal_bias="0.0">

        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/abb_discount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView11" android:layout_weight=".20"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:fontFamily="@font/viga" android:paddingLeft="4dp" android:paddingTop="8dp"
                    android:paddingRight="4dp"
                    android:paddingBottom="8dp" android:gravity="center"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/sale_discount" android:layout_weight=".2"
                    android:background="@drawable/white_blue_edittext" android:gravity="center"
                    android:textColor="@color/colorPrimaryDark" android:fontFamily="@font/viga"
                    android:text="@string/s_quantity" android:textSize="14sp" android:autofillHints=""
                    tools:targetApi="o" android:hint="@string/sf_quantity"/>
            <TextView
                    android:text="@string/total"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView20" android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="end"
                    android:layout_weight=".30"/>
            <TextView
                    android:text="@string/amount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/total_amunt" android:fontFamily="@font/viga"
                    android:background="@color/colorTableHeader" android:textColor="@color/colorWhite"
                    android:paddingLeft="4dp" android:paddingTop="8dp" android:paddingRight="4dp"
                    android:paddingBottom="8dp"
                    android:gravity="center"
                    android:layout_weight=".30"/>
        </TableRow>
    </TableLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_check_mark"
            android:id="@+id/btn_finish_sale" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintVertical_bias="0.95" android:focusable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>