<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SaleDetail" android:id="@+id/sale_detail_layout">

    <TextView
            android:text="@string/select_customer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sold_client_name" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:fontFamily="@font/viga" android:textSize="18sp" android:textColor="#4B77BE"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageSaleDetail"/>
    <TextView
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sold_date"
            app:layout_constraintTop_toBottomOf="@+id/sold_client_name" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:fontFamily="@font/viga" android:textColor="@color/colorGray"
            android:textSize="12sp" app:layout_constraintHorizontal_bias="0.51"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tableRow3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sold_date" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/abb_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView14" android:layout_weight=".15"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"/>
        <TextView
                android:text="@string/sf_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView16" android:layout_weight=".45"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"/>
        <TextView
                android:text="@string/price"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView21" android:layout_weight=".2"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"/>
        <TextView
                android:text="@string/amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView22" android:layout_weight=".2"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"/>
    </TableRow>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/soldProductsRecycler"
            app:layout_constraintTop_toBottomOf="@+id/tableRow3"
            app:layout_constraintBottom_toTopOf="@+id/tableRow4"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/tableRow4"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <TextView
                android:text="@string/abb_discount"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/sold_discount_title" android:layout_weight=".2"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/s_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/sold_discount" android:layout_weight=".2"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"
                android:textSize="14sp"/>
        <TextView
                android:text="@string/total"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/textView26" android:layout_weight=".3"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga"
                android:gravity="end" android:textSize="14sp"/>
        <TextView
                android:text="@string/s_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:id="@+id/sold_total" android:layout_weight=".3"
                android:paddingLeft="4dp" android:paddingTop="8dp"
                android:paddingRight="4dp"
                android:paddingBottom="8dp" android:background="@color/colorTableHeader"
                android:textColor="@color/colorWhite" android:fontFamily="@font/viga" android:gravity="center"
                android:textSize="14sp"/>
    </TableRow>

    <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp" app:srcCompat="@drawable/ic_money"
            android:id="@+id/imageSaleDetail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            android:contentDescription="@string/amount"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true" app:srcCompat="@drawable/ic_printer"
            android:id="@+id/btn_print"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.95" app:layout_constraintHorizontal_bias="0.95"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp" app:maxImageSize="36dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>